# shmup

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  copy.sh  sf-config.json  to_windows.sh
common/components/: BlasterComponent.hpp  LaserComponent.hpp  RotationComponent.hpp  ThrustComponent.hpp
plugins/blaster/: BlasterSystem.cpp  BlasterSystem.hpp  CMakeLists.txt  Laser.hpp
plugins/camera/: CMakeLists.txt  CameraSystem.cpp  CameraSystem.hpp
plugins/gui/: CMakeLists.txt  GUISystem.cpp  GUISystem.hpp
plugins/rotation/: CMakeLists.txt  RotationSystem.cpp  RotationSystem.hpp
plugins/thrust/: CMakeLists.txt  Thrust.hpp  ThrustSystem.cpp  ThrustSystem.hpp
python/: test.py
python/unit/: camera.py  player.py
scripts/: background.lua  clean.lua  fps.lua  gameover.lua  init.lua  score.lua  spawn.lua  test.lua
scripts/levels/: four_two_second.lua  single_two_second.lua
scripts/unit/: border.lua  enemy.lua  player.lua
scripts/unit/player/: collision.lua  input.lua  rotate.lua  thrust.lua
src/: main.cpp
src/gameobjects/: Enemy.hpp  Laser.hpp  Player.hpp
src/systems/: TypeRegisterSystem.cpp  TypeRegisterSystem.hpp
